tests/negative/neg_string_out_param.safe
-- Test: neg_string_out_param
-- Description: String formals are restricted to mode in in PR11.2.
-- Expected: REJECT unsupported_source_construct

package Neg_String_Out_Param is

   procedure Set_Name (Name : out String) is
   begin
      null;
   end Set_Name;

end Neg_String_Out_Param;
